parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CLASS
    CONTINUE
    FALSE
    FLOAT_CONST
    INT_CONST
    MODULO
    NONE
    NOTEQUAL
    NUMBER
    QUOTES
    RETURN
    SIZEOF
    TRUE
    VAR_TYPE
    char
    functionname

Grammar

Rule 0     S' -> expression
Rule 1     expression -> INT
Rule 2     expression -> FLOATTYPE
Rule 3     factor -> INT
Rule 4     factor -> FLOATTYPE
Rule 5     term -> INT
Rule 6     term -> FLOATTYPE
Rule 7     expression -> STRING
Rule 8     expression -> BOOL
Rule 9     expression -> ID DECREMENTATION
Rule 10    expression -> INT DECREMENTATION
Rule 11    expression -> ID INCREMENTATION
Rule 12    expression -> INT INCREMENTATION
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> ID PLUS expression
Rule 18    expression -> ID MINUS expression
Rule 19    expression -> ID TIMES expression
Rule 20    expression -> ID DIVIDE expression
Rule 21    expression -> ID PLUS STRING
Rule 22    expression -> PRINT LPAREN STRING RPAREN
Rule 23    expression -> ID EQUALS expression
Rule 24    expression -> ID EQUALS ID
Rule 25    expression -> PRINT LPAREN ID RPAREN
Rule 26    expression -> PRINT LPAREN expression RPAREN
Rule 27    expression -> IF LPAREN condition RPAREN LBRACE expression RBRACE
Rule 28    expression -> IF LPAREN condition AND condition RPAREN LBRACE expression RBRACE
Rule 29    expression -> IF LPAREN condition OR condition RPAREN LBRACE expression RBRACE
Rule 30    expression -> IF LPAREN condition RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
Rule 31    condition -> INT EQUALEQUAL INT
Rule 32    condition -> INT GTH INT
Rule 33    condition -> INT LTH INT
Rule 34    condition -> INT GTHOREQUAL INT
Rule 35    condition -> INT LTHOREQUAL INT
Rule 36    condition -> ID EQUALEQUAL INT
Rule 37    condition -> ID GTH INT
Rule 38    condition -> ID LTH INT
Rule 39    condition -> ID GTHOREQUAL INT
Rule 40    condition -> ID LTHOREQUAL INT
Rule 41    expression -> WHILE LPAREN ID EQUALEQUAL INT RPAREN LBRACE instruction RBRACE
Rule 42    expression -> WHILE LPAREN ID GTH INT RPAREN LBRACE instruction RBRACE
Rule 43    expression -> WHILE LPAREN ID LTH INT RPAREN LBRACE instruction RBRACE
Rule 44    expression -> WHILE LPAREN ID GTHOREQUAL INT RPAREN LBRACE instruction RBRACE
Rule 45    expression -> WHILE LPAREN ID LTHOREQUAL INT RPAREN LBRACE instruction RBRACE
Rule 46    instruction -> expression
Rule 47    instruction -> expression COMMA instruction
Rule 48    expression -> FOR INT TO INT DEUXPOINTS instruction
Rule 49    expression -> INPUT LPAREN STRING COMMA ID RPAREN
Rule 50    expression -> LIST ID SEMICOL
Rule 51    item -> INT
Rule 52    item -> STRING
Rule 53    expression -> ID POINT APPEND LPAREN item RPAREN
Rule 54    expression -> ID POINT CLEAR LPAREN RPAREN
Rule 55    expression -> ID POINT POP LPAREN INT RPAREN
Rule 56    expression -> ID POINT SORT LPAREN RPAREN
Rule 57    expression -> ID POINT REVERSE LPAREN RPAREN
Rule 58    expression -> FUNCTION ID LPAREN RPAREN LBRACE instruction RBRACE
Rule 59    expression -> FUNCTION ID LPAREN ARGS RPAREN LBRACE instruction RBRACE
Rule 60    ARGS -> expression
Rule 61    ARGS -> expression COMMA ARGS
Rule 62    expression -> FUNCTION ID LPAREN RPAREN SEMICOL
Rule 63    expression -> FUNCTION ID LPAREN ARGS RPAREN SEMICOL

Terminals, with rules where they appear

AND                  : 28
APPEND               : 53
BOOL                 : 8
BREAK                : 
CLASS                : 
CLEAR                : 54
COMMA                : 47 49 61
CONTINUE             : 
DECREMENTATION       : 9 10
DEUXPOINTS           : 48
DIVIDE               : 16 20
ELSE                 : 30
EQUALEQUAL           : 31 36 41
EQUALS               : 23 24
FALSE                : 
FLOATTYPE            : 2 4 6
FLOAT_CONST          : 
FOR                  : 48
FUNCTION             : 58 59 62 63
GTH                  : 32 37 42
GTHOREQUAL           : 34 39 44
ID                   : 9 11 17 18 19 20 21 23 24 24 25 36 37 38 39 40 41 42 43 44 45 49 50 53 54 55 56 57 58 59 62 63
IF                   : 27 28 29 30
INCREMENTATION       : 11 12
INPUT                : 49
INT                  : 1 3 5 10 12 31 31 32 32 33 33 34 34 35 35 36 37 38 39 40 41 42 43 44 45 48 48 51 55
INT_CONST            : 
LBRACE               : 27 28 29 30 30 41 42 43 44 45 58 59
LIST                 : 50
LPAREN               : 22 25 26 27 28 29 30 41 42 43 44 45 49 53 54 55 56 57 58 59 62 63
LTH                  : 33 38 43
LTHOREQUAL           : 35 40 45
MINUS                : 14 18
MODULO               : 
NONE                 : 
NOTEQUAL             : 
NUMBER               : 
OR                   : 29
PLUS                 : 13 17 21
POINT                : 53 54 55 56 57
POP                  : 55
PRINT                : 22 25 26
QUOTES               : 
RBRACE               : 27 28 29 30 30 41 42 43 44 45 58 59
RETURN               : 
REVERSE              : 57
RPAREN               : 22 25 26 27 28 29 30 41 42 43 44 45 49 53 54 55 56 57 58 59 62 63
SEMICOL              : 50 62 63
SIZEOF               : 
SORT                 : 56
STRING               : 7 21 22 49 52
TIMES                : 15 19
TO                   : 48
TRUE                 : 
VAR_TYPE             : 
WHILE                : 41 42 43 44 45
char                 : 
error                : 
functionname         : 

Nonterminals, with rules where they appear

ARGS                 : 59 61 63
condition            : 27 28 28 29 29 30
expression           : 13 13 14 14 15 15 16 16 17 18 19 20 23 26 27 28 29 30 30 46 47 60 61 0
factor               : 
instruction          : 41 42 43 44 45 47 48 58 59
item                 : 53
term                 : 

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . INT
    (2) expression -> . FLOATTYPE
    (7) expression -> . STRING
    (8) expression -> . BOOL
    (9) expression -> . ID DECREMENTATION
    (10) expression -> . INT DECREMENTATION
    (11) expression -> . ID INCREMENTATION
    (12) expression -> . INT INCREMENTATION
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . ID PLUS expression
    (18) expression -> . ID MINUS expression
    (19) expression -> . ID TIMES expression
    (20) expression -> . ID DIVIDE expression
    (21) expression -> . ID PLUS STRING
    (22) expression -> . PRINT LPAREN STRING RPAREN
    (23) expression -> . ID EQUALS expression
    (24) expression -> . ID EQUALS ID
    (25) expression -> . PRINT LPAREN ID RPAREN
    (26) expression -> . PRINT LPAREN expression RPAREN
    (27) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE
    (28) expression -> . IF LPAREN condition AND condition RPAREN LBRACE expression RBRACE
    (29) expression -> . IF LPAREN condition OR condition RPAREN LBRACE expression RBRACE
    (30) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . WHILE LPAREN ID EQUALEQUAL INT RPAREN LBRACE instruction RBRACE
    (42) expression -> . WHILE LPAREN ID GTH INT RPAREN LBRACE instruction RBRACE
    (43) expression -> . WHILE LPAREN ID LTH INT RPAREN LBRACE instruction RBRACE
    (44) expression -> . WHILE LPAREN ID GTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (45) expression -> . WHILE LPAREN ID LTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (48) expression -> . FOR INT TO INT DEUXPOINTS instruction
    (49) expression -> . INPUT LPAREN STRING COMMA ID RPAREN
    (50) expression -> . LIST ID SEMICOL
    (53) expression -> . ID POINT APPEND LPAREN item RPAREN
    (54) expression -> . ID POINT CLEAR LPAREN RPAREN
    (55) expression -> . ID POINT POP LPAREN INT RPAREN
    (56) expression -> . ID POINT SORT LPAREN RPAREN
    (57) expression -> . ID POINT REVERSE LPAREN RPAREN
    (58) expression -> . FUNCTION ID LPAREN RPAREN LBRACE instruction RBRACE
    (59) expression -> . FUNCTION ID LPAREN ARGS RPAREN LBRACE instruction RBRACE
    (62) expression -> . FUNCTION ID LPAREN RPAREN SEMICOL
    (63) expression -> . FUNCTION ID LPAREN ARGS RPAREN SEMICOL

    INT             shift and go to state 2
    FLOATTYPE       shift and go to state 3
    STRING          shift and go to state 4
    BOOL            shift and go to state 5
    ID              shift and go to state 6
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    INPUT           shift and go to state 11
    LIST            shift and go to state 12
    FUNCTION        shift and go to state 13

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression

    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17


state 2

    (1) expression -> INT .
    (10) expression -> INT . DECREMENTATION
    (12) expression -> INT . INCREMENTATION

    PLUS            reduce using rule 1 (expression -> INT .)
    MINUS           reduce using rule 1 (expression -> INT .)
    TIMES           reduce using rule 1 (expression -> INT .)
    DIVIDE          reduce using rule 1 (expression -> INT .)
    $end            reduce using rule 1 (expression -> INT .)
    RPAREN          reduce using rule 1 (expression -> INT .)
    COMMA           reduce using rule 1 (expression -> INT .)
    RBRACE          reduce using rule 1 (expression -> INT .)
    DECREMENTATION  shift and go to state 18
    INCREMENTATION  shift and go to state 19


state 3

    (2) expression -> FLOATTYPE .

    PLUS            reduce using rule 2 (expression -> FLOATTYPE .)
    MINUS           reduce using rule 2 (expression -> FLOATTYPE .)
    TIMES           reduce using rule 2 (expression -> FLOATTYPE .)
    DIVIDE          reduce using rule 2 (expression -> FLOATTYPE .)
    $end            reduce using rule 2 (expression -> FLOATTYPE .)
    RPAREN          reduce using rule 2 (expression -> FLOATTYPE .)
    COMMA           reduce using rule 2 (expression -> FLOATTYPE .)
    RBRACE          reduce using rule 2 (expression -> FLOATTYPE .)


state 4

    (7) expression -> STRING .

    PLUS            reduce using rule 7 (expression -> STRING .)
    MINUS           reduce using rule 7 (expression -> STRING .)
    TIMES           reduce using rule 7 (expression -> STRING .)
    DIVIDE          reduce using rule 7 (expression -> STRING .)
    $end            reduce using rule 7 (expression -> STRING .)
    RPAREN          reduce using rule 7 (expression -> STRING .)
    COMMA           reduce using rule 7 (expression -> STRING .)
    RBRACE          reduce using rule 7 (expression -> STRING .)


state 5

    (8) expression -> BOOL .

    PLUS            reduce using rule 8 (expression -> BOOL .)
    MINUS           reduce using rule 8 (expression -> BOOL .)
    TIMES           reduce using rule 8 (expression -> BOOL .)
    DIVIDE          reduce using rule 8 (expression -> BOOL .)
    $end            reduce using rule 8 (expression -> BOOL .)
    RPAREN          reduce using rule 8 (expression -> BOOL .)
    COMMA           reduce using rule 8 (expression -> BOOL .)
    RBRACE          reduce using rule 8 (expression -> BOOL .)


state 6

    (9) expression -> ID . DECREMENTATION
    (11) expression -> ID . INCREMENTATION
    (17) expression -> ID . PLUS expression
    (18) expression -> ID . MINUS expression
    (19) expression -> ID . TIMES expression
    (20) expression -> ID . DIVIDE expression
    (21) expression -> ID . PLUS STRING
    (23) expression -> ID . EQUALS expression
    (24) expression -> ID . EQUALS ID
    (53) expression -> ID . POINT APPEND LPAREN item RPAREN
    (54) expression -> ID . POINT CLEAR LPAREN RPAREN
    (55) expression -> ID . POINT POP LPAREN INT RPAREN
    (56) expression -> ID . POINT SORT LPAREN RPAREN
    (57) expression -> ID . POINT REVERSE LPAREN RPAREN

    DECREMENTATION  shift and go to state 20
    INCREMENTATION  shift and go to state 21
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    EQUALS          shift and go to state 26
    POINT           shift and go to state 27


state 7

    (22) expression -> PRINT . LPAREN STRING RPAREN
    (25) expression -> PRINT . LPAREN ID RPAREN
    (26) expression -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 28


state 8

    (27) expression -> IF . LPAREN condition RPAREN LBRACE expression RBRACE
    (28) expression -> IF . LPAREN condition AND condition RPAREN LBRACE expression RBRACE
    (29) expression -> IF . LPAREN condition OR condition RPAREN LBRACE expression RBRACE
    (30) expression -> IF . LPAREN condition RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE

    LPAREN          shift and go to state 29


state 9

    (41) expression -> WHILE . LPAREN ID EQUALEQUAL INT RPAREN LBRACE instruction RBRACE
    (42) expression -> WHILE . LPAREN ID GTH INT RPAREN LBRACE instruction RBRACE
    (43) expression -> WHILE . LPAREN ID LTH INT RPAREN LBRACE instruction RBRACE
    (44) expression -> WHILE . LPAREN ID GTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (45) expression -> WHILE . LPAREN ID LTHOREQUAL INT RPAREN LBRACE instruction RBRACE

    LPAREN          shift and go to state 30


state 10

    (48) expression -> FOR . INT TO INT DEUXPOINTS instruction

    INT             shift and go to state 31


state 11

    (49) expression -> INPUT . LPAREN STRING COMMA ID RPAREN

    LPAREN          shift and go to state 32


state 12

    (50) expression -> LIST . ID SEMICOL

    ID              shift and go to state 33


state 13

    (58) expression -> FUNCTION . ID LPAREN RPAREN LBRACE instruction RBRACE
    (59) expression -> FUNCTION . ID LPAREN ARGS RPAREN LBRACE instruction RBRACE
    (62) expression -> FUNCTION . ID LPAREN RPAREN SEMICOL
    (63) expression -> FUNCTION . ID LPAREN ARGS RPAREN SEMICOL

    ID              shift and go to state 34


state 14

    (13) expression -> expression PLUS . expression
    (1) expression -> . INT
    (2) expression -> . FLOATTYPE
    (7) expression -> . STRING
    (8) expression -> . BOOL
    (9) expression -> . ID DECREMENTATION
    (10) expression -> . INT DECREMENTATION
    (11) expression -> . ID INCREMENTATION
    (12) expression -> . INT INCREMENTATION
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . ID PLUS expression
    (18) expression -> . ID MINUS expression
    (19) expression -> . ID TIMES expression
    (20) expression -> . ID DIVIDE expression
    (21) expression -> . ID PLUS STRING
    (22) expression -> . PRINT LPAREN STRING RPAREN
    (23) expression -> . ID EQUALS expression
    (24) expression -> . ID EQUALS ID
    (25) expression -> . PRINT LPAREN ID RPAREN
    (26) expression -> . PRINT LPAREN expression RPAREN
    (27) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE
    (28) expression -> . IF LPAREN condition AND condition RPAREN LBRACE expression RBRACE
    (29) expression -> . IF LPAREN condition OR condition RPAREN LBRACE expression RBRACE
    (30) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . WHILE LPAREN ID EQUALEQUAL INT RPAREN LBRACE instruction RBRACE
    (42) expression -> . WHILE LPAREN ID GTH INT RPAREN LBRACE instruction RBRACE
    (43) expression -> . WHILE LPAREN ID LTH INT RPAREN LBRACE instruction RBRACE
    (44) expression -> . WHILE LPAREN ID GTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (45) expression -> . WHILE LPAREN ID LTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (48) expression -> . FOR INT TO INT DEUXPOINTS instruction
    (49) expression -> . INPUT LPAREN STRING COMMA ID RPAREN
    (50) expression -> . LIST ID SEMICOL
    (53) expression -> . ID POINT APPEND LPAREN item RPAREN
    (54) expression -> . ID POINT CLEAR LPAREN RPAREN
    (55) expression -> . ID POINT POP LPAREN INT RPAREN
    (56) expression -> . ID POINT SORT LPAREN RPAREN
    (57) expression -> . ID POINT REVERSE LPAREN RPAREN
    (58) expression -> . FUNCTION ID LPAREN RPAREN LBRACE instruction RBRACE
    (59) expression -> . FUNCTION ID LPAREN ARGS RPAREN LBRACE instruction RBRACE
    (62) expression -> . FUNCTION ID LPAREN RPAREN SEMICOL
    (63) expression -> . FUNCTION ID LPAREN ARGS RPAREN SEMICOL

    INT             shift and go to state 2
    FLOATTYPE       shift and go to state 3
    STRING          shift and go to state 4
    BOOL            shift and go to state 5
    ID              shift and go to state 6
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    INPUT           shift and go to state 11
    LIST            shift and go to state 12
    FUNCTION        shift and go to state 13

    expression                     shift and go to state 35

state 15

    (14) expression -> expression MINUS . expression
    (1) expression -> . INT
    (2) expression -> . FLOATTYPE
    (7) expression -> . STRING
    (8) expression -> . BOOL
    (9) expression -> . ID DECREMENTATION
    (10) expression -> . INT DECREMENTATION
    (11) expression -> . ID INCREMENTATION
    (12) expression -> . INT INCREMENTATION
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . ID PLUS expression
    (18) expression -> . ID MINUS expression
    (19) expression -> . ID TIMES expression
    (20) expression -> . ID DIVIDE expression
    (21) expression -> . ID PLUS STRING
    (22) expression -> . PRINT LPAREN STRING RPAREN
    (23) expression -> . ID EQUALS expression
    (24) expression -> . ID EQUALS ID
    (25) expression -> . PRINT LPAREN ID RPAREN
    (26) expression -> . PRINT LPAREN expression RPAREN
    (27) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE
    (28) expression -> . IF LPAREN condition AND condition RPAREN LBRACE expression RBRACE
    (29) expression -> . IF LPAREN condition OR condition RPAREN LBRACE expression RBRACE
    (30) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . WHILE LPAREN ID EQUALEQUAL INT RPAREN LBRACE instruction RBRACE
    (42) expression -> . WHILE LPAREN ID GTH INT RPAREN LBRACE instruction RBRACE
    (43) expression -> . WHILE LPAREN ID LTH INT RPAREN LBRACE instruction RBRACE
    (44) expression -> . WHILE LPAREN ID GTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (45) expression -> . WHILE LPAREN ID LTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (48) expression -> . FOR INT TO INT DEUXPOINTS instruction
    (49) expression -> . INPUT LPAREN STRING COMMA ID RPAREN
    (50) expression -> . LIST ID SEMICOL
    (53) expression -> . ID POINT APPEND LPAREN item RPAREN
    (54) expression -> . ID POINT CLEAR LPAREN RPAREN
    (55) expression -> . ID POINT POP LPAREN INT RPAREN
    (56) expression -> . ID POINT SORT LPAREN RPAREN
    (57) expression -> . ID POINT REVERSE LPAREN RPAREN
    (58) expression -> . FUNCTION ID LPAREN RPAREN LBRACE instruction RBRACE
    (59) expression -> . FUNCTION ID LPAREN ARGS RPAREN LBRACE instruction RBRACE
    (62) expression -> . FUNCTION ID LPAREN RPAREN SEMICOL
    (63) expression -> . FUNCTION ID LPAREN ARGS RPAREN SEMICOL

    INT             shift and go to state 2
    FLOATTYPE       shift and go to state 3
    STRING          shift and go to state 4
    BOOL            shift and go to state 5
    ID              shift and go to state 6
    PRINT           shift and go to state 7
    IF              shift and go to state 8
    WHILE           shift and go to state 9
    FOR             shift and go to state 10
    INPUT           shift and go to state 11
    LIST            shift and go to state 12
    FUNCTION        shift and go to state 13

    expression                     shift and go to state 36

state 16

    (15) expression -> expression TIMES . expression
    (1) expression -> . INT
    (2) expression -> . FLOATTYPE
    (7) expression -> . STRING
    (8) expression -> . BOOL
    (9) expression -> . ID DECREMENTATION
    (10) expression -> . INT DECREMENTATION
    (11) expression -> . ID INCREMENTATION
    (12) expression -> . INT INCREMENTATION
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . ID PLUS expression
    (18) expression -> . ID MINUS expression
    (19) expression -> . ID TIMES expression
    (20) expression -> . ID DIVIDE expression
    (21) expression -> . ID PLUS STRING
    (22) expression -> . PRINT LPAREN STRING RPAREN
    (23) expression -> . ID EQUALS expression
    (24) expression -> . ID EQUALS ID
    (25) expression -> . PRINT LPAREN ID RPAREN
    (26) expression -> . PRINT LPAREN expression RPAREN
    (27) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE
    (28) expression -> . IF LPAREN condition AND condition RPAREN LBRACE expression RBRACE
    (29) expression -> . IF LPAREN condition OR condition RPAREN LBRACE expression RBRACE
    (30) expression -> . IF LPAREN condition RPAREN LBRACE expression RBRACE ELSE LBRACE expression RBRACE
    (41) expression -> . WHILE LPAREN ID EQUALEQUAL INT RPAREN LBRACE instruction RBRACE
    (42) expression -> . WHILE LPAREN ID GTH INT RPAREN LBRACE instruction RBRACE
    (43) expression -> . WHILE LPAREN ID LTH INT RPAREN LBRACE instruction RBRACE
    (44) expression -> . WHILE LPAREN ID GTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (45) expression -> . WHILE LPAREN ID LTHOREQUAL INT RPAREN LBRACE instruction RBRACE
    (48) expression -> . FOR INT TO INT DEUXPOINTS instruction
    (49) expression -> . INPUT LPAREN STRING COMMA ID RPAREN
    (50) expression -> . LIST ID SEMICOL
    (53) expression -> . ID POINT APPEND LPAREN item RPAREN
